fix wrong params

--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -138,12 +138,12 @@ variable_bucket_start: 26
 
 # Placeholder. The variable will later be set to contain, at random, a number representing the left or right bucket.
 variable_bucket_pos:            1	        
-description: clean_nozzle PURGE=<true/false> PURGE_LENGTH=<number in mm> PURGE_TEMP=<temp celsius>
+description: clean_nozzle PURGE=(true/false) PURGE_LENGTH=(in mm) PURGE_TEMP=(celsius)
 gcode:
    # If you want the purging routine in your bucket enabled, set to True (and vice versa).
    {% set _enable_purge= params.PURGE|default('false') == 'true' %}
-   {% set _purge_length= params.PURGE_LENGTH|default(variable_purge_len)|float %}
-   {% set _purge_temp= params.PURGE_TEMP|default(variable_purge_temp_defaut)|float %}
+   {% set _purge_length= params.PURGE_LENGTH|default(purge_len)|float %}
+   {% set _purge_temp= params.PURGE_TEMP|default(purge_temp_defaut)|float %}
 
    # First, check if the axes are homed.
    {% if "xyz" in printer.toolhead.homed_axes %}
@@ -191,7 +191,7 @@ gcode:
          {% if canPurge %}
             M118 Purging...
             M83      ; relative mode
-            G1 E{purge_length} F{purge_spd}
+            G1 E{_purge_length} F{purge_spd}
             G1 E-{purge_ret} F{purge_spd * 5}
             G4 P{ooze_dwell * 1000}
             G92 E0   ; reset extruder
