move the nozzle at a safer position to print clean the print start

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -13,17 +13,13 @@ gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
-  {% set FORCE_SOAK = params.FORCE_SOAK|default(0)|float %}
   {% set PURGE_TEMP = params.PURGE_TEMP|default(EXTRUDER)|float %}
-
-  M117 Starting Warmup
-
+  
+  M117 Heating bed
+  M190 S{BED} # heat bed due to PrusaSlicer setting it at 0
+  
   #if the bed is already at the correct target temp, we assume no heat soak is necessary.
-  {% if ((SOAK|int) >= 0 and (printer.heater_bed.temperature <= (BED|int - 10))) or (FORCE_SOAK|int) == 1 %}
-   
-    M117 Heating for Soak
-    M190 S{BED}
-    
+  {% if (SOAK|int) > 0 %}
     M117 Starting Soak
     {% for timer in range( SOAK|int,0,-1) %}
       #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
@@ -35,6 +31,8 @@ gcode:
     {% endfor %}
   M117 Soak Complete
   {% endif %}
+  
+  M190 S{BED}   ; be sure bed heat up
 
   BED_MESH_CLEAR                 ; clear mesh
   _CG28                          ; Home the printer
