--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -52,7 +52,7 @@ variable_brush_top:            3.3
 
 # These parameters define your scrubbing, travel speeds, safe z clearance and how many times you want to wipe. Update as necessary. Wipe 
 # direction is randomized based off whether the left or right bucket is randomly selected in the purge & scrubbing routine.
-variable_clearance_z:           15	         ; When traveling, but not cleaning, the clearance along the z-axis between nozzle and brush.
+variable_clearance_z:           20	         ; When traveling, but not cleaning, the clearance along the z-axis between nozzle and brush.
 variable_wipe_qty:              3	         ; Number of complete (A complete wipe: left, right, left OR right, left, right) wipes.
 variable_prep_spd_xy:        3000	         ; Travel (not cleaning) speed along x and y-axis in mm/min.
 variable_prep_spd_z:         1500	         ; Travel (not cleaning) speed along z axis in mm/min.
@@ -222,7 +222,7 @@ gcode:
       ## Clear from area.
       M117 Cleaned!
       G1 Z{brush_top + clearance_z} F{prep_spd_z}
-      G1 X{bucket_start + (bucket_left_width / 3)} F{prep_spd_xy} 
+      G1 X{bucket_start + (bucket_left_width / 3)} Y301 F{prep_spd_xy} 
 
       ## Restore the gcode state to how it was before the macro.
       RESTORE_GCODE_STATE NAME=clean_nozzle
