go back to basics for nozzle scrub, same for print

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -31,15 +31,13 @@ gcode:
     {% endfor %}
   M117 Soak Complete
   {% endif %}
-  
-  M190 S{BED}   ; be sure bed heat up
 
   BED_MESH_CLEAR                 ; clear mesh
   _CG28                          ; Home the printer
   G90                            ; Use absolute coordinates
-  PARKCENTER                     ; Move to center
   QUAD_GANTRY_LEVEL CALIBRATE=false ; QGL without Z calibration (done later)
-  M117 Heating..
+  
+  M117 Heating Extruder..
   M106 S255                      ; set print fan to full speed to avoid melting fan ducts
   M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
   
@@ -47,7 +45,7 @@ gcode:
   CALIBRATE_Z
   BED_MESH_CALIBRATE
   
-  clean_nozzle PURGE=true PURGE_LENGTH=15 PURGE_TEMP=PURGE_TEMP
+  clean_nozzle PURGE=true
   M117 Starting Print
 
 [gcode_macro PRINT_END]
