--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -37,13 +37,15 @@
 # further below on how to set your XY position.
 variable_location_bucket_rear:      True
 
+# If you want the purging routine in your bucket enabled, set to True (and vice versa).
+variable_enable_purge:              False
+
 # These parameters define your filament purging. The retract variable is used to retract right after purging to prevent unnecessary
 # oozing. Some filament are particularly oozy and may continue to ooze out of the nozzle for a second or two after retracting. The
 # ooze dwell variable makes allowance for this. Update as necessary. If you decided to not enable purge, you can ignore this section.
-variable_purge_len:            40	         ; Amount of filament, in mm, to purge.
+variable_purge_len:            15	         ; Amount of filament, in mm, to purge.
 variable_purge_spd:           150	         ; Speed, in mm/min, of the purge.
-variable_purge_temp_min:      200	         ; Minimum nozzle temperature to permit a purge. Otherwise, purge will not occur.
-variable_purge_temp_defaut:   240	         ; Default nozzle temperature to purge.
+variable_purge_temp_min:      210	         ; Minimum nozzle temperature to permit a purge. Otherwise, purge will not occur.
 variable_purge_ret:             2            ; Retract length, in mm, after purging to prevent slight oozing. Adjust as necessary.
 variable_ooze_dwell:            15            ; Dwell/wait time, in seconds, after purging and retracting.
 
@@ -138,15 +140,12 @@ variable_bucket_start: 26
 
 # Placeholder. The variable will later be set to contain, at random, a number representing the left or right bucket.
 variable_bucket_pos:            1	        
-description: clean_nozzle PURGE=(true/false) PURGE_LENGTH=(in mm) PURGE_TEMP=(celsius)
+description: clean_nozzle PURGE=false/(true)
 gcode:
-   # If you want the purging routine in your bucket enabled, set to True (and vice versa).
-   {% set _enable_purge= params.PURGE|default('false') == 'true' %}
-   {% set _purge_length= params.PURGE_LENGTH|default(purge_len)|float %}
-   {% set _purge_temp= params.PURGE_TEMP|default(purge_temp_defaut)|float %}
-
    # First, check if the axes are homed.
    {% if "xyz" in printer.toolhead.homed_axes %}
+      # If you want the purging routine in your bucket enabled, set to True (and vice versa).
+      {% set _enable_purge= params.PURGE|default(enable_purge) == 'true' %}
 
       ## Save the gcode state in this macro instance.
       SAVE_GCODE_STATE NAME=clean_nozzle
@@ -182,16 +181,14 @@ gcode:
          {% endif %}
          G1 Z{brush_top}
 
-         ### Heat up extruder
-         M109 S{_purge_temp}
          ### Perform purge if the temp is up to min temp. If not, it will skip and continue executing rest of macro. Small retract after
          ### purging to minimize any persistent oozing at 5x purge_spd. G4 dwell is in milliseconds, hence * 1000 in formula.
-         {% set canPurge= printer.extruder.temperature >= purge_temp_min %}
-         M118 Temperature allow purging? {canPurge}
-         {% if canPurge %}
+         {% set _canPurge= printer.extruder.temperature >= purge_temp_min %}
+         M118 Temperature allow purging? {_canPurge}
+         {% if _canPurge %}
             M118 Purging...
             M83      ; relative mode
-            G1 E{_purge_length} F{purge_spd}
+            G1 E{purge_len} F{purge_spd}
             G1 E-{purge_ret} F{purge_spd * 5}
             G4 P{ooze_dwell * 1000}
             G92 E0   ; reset extruder
