--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -23,8 +23,7 @@ path: ~/gcode_files
 [include client.cfg]
 [include client_macros.cfg]
 [include nozzle_scrub.cfg]
-[include probing.cfg]
-[include homing.cfg]
+[include klicky_probe.cfg]
 
 ###################################################################
 #  MCU
@@ -343,6 +342,55 @@ heater: extruder
 #heater: heater_bed
 #heater_temp: 60
 #fan_speed: 1.0
+
+#####################################################################
+# 	Probe 
+#####################################################################
+[probe]
+pin: ^PA3
+x_offset: -2.5
+y_offset: 25.0
+z_offset: 9.8
+speed: 4.0
+lift_speed: 8.0
+samples: 3
+samples_result: median
+sample_retract_dist: 1.5
+samples_tolerance: 0.01
+samples_tolerance_retries: 3
+
+
+[bed_mesh]
+speed: 300
+horizontal_move_z: 10
+mesh_min: 40, 40
+mesh_max: 260,260
+fade_start: 0.6
+fade_end: 10.0
+probe_count: 5,5
+algorithm: bicubic
+relative_reference_index: 12
+
+  
+#####################################################################
+#  Gantry Adjustment Routines
+#####################################################################
+[quad_gantry_level]
+##	Gantry Corners for 300mm Build
+gantry_corners:
+	-60,-10
+	360,370
+#	Probe points
+points:
+	50,25
+	50,225
+	250,225
+	250,25
+speed: 300
+horizontal_move_z: 10 #5
+retries: 5
+retry_tolerance: 0.01
+max_adjust: 10
 
 #####################################################################
 #	LED Control
