remove separate Z endstop, use virtual

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -13,7 +13,6 @@ gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
-  {% set PURGE_TEMP = params.PURGE_TEMP|default(EXTRUDER)|float %}
   
   M117 Heating bed
   M190 S{BED} # heat bed due to PrusaSlicer setting it at 0
@@ -33,19 +32,19 @@ gcode:
   {% endif %}
 
   BED_MESH_CLEAR                 ; clear mesh
-  _CG28                          ; Home the printer
+  G28                          ; Home the printer
   G90                            ; Use absolute coordinates
-  QUAD_GANTRY_LEVEL CALIBRATE=false ; QGL without Z calibration (done later)
+  #QUAD_GANTRY_LEVEL CALIBRATE=false ; QGL without Z calibration (done later)
   
   M117 Heating Extruder..
   M106 S255                      ; set print fan to full speed to avoid melting fan ducts
   M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
+  clean_nozzle PURGE=true                   ; clean nozzle
   
-  clean_nozzle                   ; clean nozzle
-  CALIBRATE_Z
-  BED_MESH_CALIBRATE
+  #CALIBRATE_Z
+  #BED_MESH_CALIBRATE
   
-  clean_nozzle PURGE=true
+  #clean_nozzle PURGE=true
   M117 Starting Print
 
 [gcode_macro PRINT_END]
