--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -124,7 +124,7 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
 ##  In Z- Position
-endstop_pin: ^PA0
+endstop_pin: probe:z_virtual_endstop #^PA0
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##	Increasing position_endstop brings nozzle closer to the bed
@@ -387,7 +387,7 @@ points:
 	250,225
 	250,25
 speed: 300
-horizontal_move_z: 10 #5
+horizontal_move_z: 15 #5
 retries: 5
 retry_tolerance: 0.01
 max_adjust: 10
@@ -467,7 +467,7 @@ timeout: 5400 # 90 minutes
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [stepper_z]
-#*# position_endstop = 2.780
+#*# position_endstop = 3.222 
 #*#
 #*# [heater_bed]
 #*# control = pid
