increase slightly hotend for first layer park hotend above bucket at the end

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -14,7 +14,7 @@ gcode:
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
   
-  M117 Heating bed
+  M117 Heating bed...
   M190 S{BED} # heat bed due to PrusaSlicer setting it at 0
   
   #if the bed is already at the correct target temp, we assume no heat soak is necessary.
@@ -31,20 +31,20 @@ gcode:
   M117 Soak Complete
   {% endif %}
 
-  BED_MESH_CLEAR                 ; clear mesh
-  G28                          ; Home the printer
+  BED_MESH_CLEAR                 
   G90                            ; Use absolute coordinates
-  #QUAD_GANTRY_LEVEL CALIBRATE=false ; QGL without Z calibration (done later)
-  
+  ATTACH_PROBE_LOCK
+  G28                         ; Home the printer
+  QUAD_GANTRY_LEVEL
+  #BED_MESH_CALIBRATE or LOAD
+  G28
+  DOCK_PROBE_UNLOCK
+
   M117 Heating Extruder..
   M106 S255                      ; set print fan to full speed to avoid melting fan ducts
   M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
   clean_nozzle PURGE=true                   ; clean nozzle
-  
-  #CALIBRATE_Z
-  #BED_MESH_CALIBRATE
-  
-  #clean_nozzle PURGE=true
+
   M117 Starting Print
 
 [gcode_macro PRINT_END]
@@ -59,7 +59,7 @@ gcode:
     M107                           ; turn off fan
     G1 Z2 F3000                    ; move nozzle up 2mm
     G90                            ; absolute positioning
-    G0 X300 Y310 F3600            ; park nozzle at rear
+    G0 X45 Y310 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     
 
