--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -350,7 +350,8 @@ heater: extruder
 pin: ^PA3
 x_offset: -2.5
 y_offset: 25.0
-z_offset: 7.445
+# +: lower, -:higher
+z_offset: 7.43
 speed: 4.0
 lift_speed: 8.0
 samples: 3
