--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -32,12 +32,13 @@ gcode:
   {% endif %}
 
   BED_MESH_CLEAR                 
-  G90                            ; Use absolute coordinates
+  G90
+  G28 X Y                            ; Use absolute coordinates
   ATTACH_PROBE_LOCK
-  G28                         ; Home the printer
+  G28 Z                        ; Home the printer
   QUAD_GANTRY_LEVEL
   #BED_MESH_CALIBRATE or LOAD
-  G28
+  G28 Z
   DOCK_PROBE_UNLOCK
 
   M117 Heating Extruder..
@@ -60,6 +61,7 @@ gcode:
     G1 Z2 F3000                    ; move nozzle up 2mm
     G90                            ; absolute positioning
     G0 X45 Y310 F3600            ; park nozzle at rear
+    clean_nozzle
     BED_MESH_CLEAR
     
 
