add bed mesh before printing

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -37,7 +37,7 @@ gcode:
   ATTACH_PROBE_LOCK
   G28 Z                        ; Home the printer
   QUAD_GANTRY_LEVEL
-  #BED_MESH_CALIBRATE or LOAD
+  BED_MESH_CALIBRATE
   G28 Z
   DOCK_PROBE_UNLOCK
 
