Add ADXL/RPI MCU Tweak bed mesh for bigger area probing remove relative not usefull since using VirtualProbe add bed mesh offset for ABS and PLA, need to validate on the long term

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -38,7 +38,6 @@ gcode:
   G28 Z                        ; Home the printer
   QUAD_GANTRY_LEVEL
   BED_MESH_CALIBRATE
-  G28 Z
   DOCK_PROBE_UNLOCK
 
   M117 Heating Extruder..
@@ -133,14 +132,34 @@ gcode:
 
 
 #####################################################################
+#  BED OFFSET
+#####################################################################
+[gcode_macro ABS_OFFSET]
+gcode:
+  SET_GCODE_OFFSET Z_ADJUST=-0.15 MOVE=1
+
+[gcode_macro PLA_OFFSET]
+gcode:
+  SET_GCODE_OFFSET Z_ADJUST=0 MOVE=1
+
+#####################################################################
 #  OTHER
 #####################################################################
 
-[gcode_macro PARKCENTER]
+[gcode_macro PARK_CENTER]
 gcode:
     {% set Z = params.Z|default(30)|float %}
     SAVE_GCODE_STATE NAME=PARKCENTER_state
-    _CG28                          ; Home if not already homed
+    CG28                          ; Home if not already homed
     G90                            ; absolute positioning
     G0 X150 Y150 Z{Z} F12000       ; move to center
     RESTORE_GCODE_STATE NAME=PARKCENTER_state
+
+[gcode_macro PARK_BUCKET]
+gcode:
+    {% set Z = params.Z|default(30)|float %}
+    SAVE_GCODE_STATE NAME=PARKBUCKET_state
+    CG28                          ; Home if not already homed
+    G90                            ; absolute positioning
+    G0 X50 Y310 Z{Z} F12000       ; move to center
+    RESTORE_GCODE_STATE NAME=PARKBUCKET_state
