--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -25,6 +25,21 @@ path: ~/gcode_files
 [include nozzle_scrub.cfg]
 [include klicky_probe.cfg]
 
+
+###################################################################
+#  Raspberry ADXL
+###################################################################
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
+[adxl345]
+cs_pin: rpi:None
+
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    150,150,20  # an example
+
 ###################################################################
 #  MCU
 ###################################################################
@@ -47,10 +62,16 @@ restart_method: command
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 3000			        #Max 4000
-max_z_velocity: 15			#Max 15 for 12V TMC Drivers, can increase for 24V
-max_z_accel: 350
+max_accel: 1500					#Max 4000
+max_z_velocity: 20			#Max 15 for 12V TMC Drivers, can increase for 24V
+max_z_accel: 500
 square_corner_velocity: 5.0
+
+# [input_shaper]
+# shaper_freq_x: 25
+# shaper_type_x: mzv
+# shaper_freq_y: 34.6
+# shaper_type_y: mzv
 
 #####################################################################
 #  X/Y Stepper Settings
@@ -325,11 +346,11 @@ max_power:0.7
 off_below: 0.1
 heater: extruder
 
-# [controller_fan pi_fan]
-# pin: PB5
-# kick_start_time: 0.5
-# off_below: 0.1
-# max_power: 0.5
+[controller_fan pi_fan]
+pin: PB5
+kick_start_time: 0.5
+off_below: 0.1
+max_power: 0.5
 # heater: heater_bed
 
 
@@ -354,23 +375,22 @@ y_offset: 25.0
 z_offset: 7.438
 speed: 4.0
 lift_speed: 8.0
-samples: 3
-samples_result: median
+samples: 2
+samples_result: average
 sample_retract_dist: 1.5
-samples_tolerance: 0.01
-samples_tolerance_retries: 3
+samples_tolerance: 0.007
+samples_tolerance_retries: 4
 
 
 [bed_mesh]
 speed: 300
 horizontal_move_z: 10
-mesh_min: 40, 40
-mesh_max: 260,260
+mesh_min: 15, 25
+mesh_max: 285,275
 fade_start: 0.6
 fade_end: 10.0
-probe_count: 5,5
+probe_count: 5,4
 algorithm: bicubic
-relative_reference_index: 12
 
   
 #####################################################################
