remove 1 to build size, Y rail hit the z joints update home qgl to avoid multiple probe dock/undock

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,9 +1,11 @@
 [gcode_macro HOME_QGL]
 gcode:
     BED_MESH_CLEAR
+    ATTACH_PROBE_LOCK
     G28
     QUAD_GANTRY_LEVEL
-    G28
+    G28 Z
+    DOCK_PROBE_UNLOCK
     G0 X150 Y150 Z30 F3600
  
    
@@ -59,7 +61,7 @@ gcode:
     M107                           ; turn off fan
     G1 Z2 F3000                    ; move nozzle up 2mm
     G90                            ; absolute positioning
-    G0 X45 Y310 F3600            ; park nozzle at rear
+    G0 X45 Y309 F3600            ; park nozzle at rear
     clean_nozzle
     BED_MESH_CLEAR
     
@@ -161,5 +163,5 @@ gcode:
     SAVE_GCODE_STATE NAME=PARKBUCKET_state
     CG28                          ; Home if not already homed
     G90                            ; absolute positioning
-    G0 X50 Y310 Z{Z} F12000       ; move to center
+    G0 X50 Y309 Z{Z} F12000       ; move to center
     RESTORE_GCODE_STATE NAME=PARKBUCKET_state
