--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -34,11 +34,16 @@ serial: /tmp/klipper_host_mcu
 
 [adxl345]
 cs_pin: rpi:None
+axes_map: z,-x,y
 
 [resonance_tester]
 accel_chip: adxl345
 probe_points:
-    150,150,20  # an example
+    150,150,20 
+max_smoothing: 0.1
+min_freq: 10
+max_freq: 100
+
 
 ###################################################################
 #  MCU
@@ -62,16 +67,17 @@ restart_method: command
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 1500					#Max 4000
+max_accel: 5000 ; safe 1500					#Max 4000
+max_accel_to_decel: 5000
 max_z_velocity: 20			#Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 500
 square_corner_velocity: 5.0
 
-# [input_shaper]
-# shaper_freq_x: 25
-# shaper_type_x: mzv
-# shaper_freq_y: 34.6
-# shaper_type_y: mzv
+[input_shaper]
+shaper_freq_x: 41.5
+shaper_type_x: mzv
+shaper_freq_y: 41.5
+shaper_type_y: mzv
 
 #####################################################################
 #  X/Y Stepper Settings
@@ -115,8 +121,8 @@ full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: ^PA2 
 position_min: 0
 
-position_endstop: 309 # 300mm build
-position_max: 309     # 300mm build
+position_endstop: 308 # 300mm build
+position_max: 308     # 300mm build
 
 homing_speed: 25  #Max 100
 homing_retract_dist: 5
@@ -262,7 +268,7 @@ min_extrude_temp: 170
 #pid_ki = 1.304
 #pid_kd = 131.721
 ##	Try to keep pressure_advance below 1.0
-pressure_advance: 0.05
+pressure_advance: 0.02
 ##	Default is 0.040, leave stock
 pressure_advance_smooth_time: 0.040
 
@@ -372,7 +378,7 @@ pin: ^PA3
 x_offset: -2.5
 y_offset: 25.0
 # +: lower, -:higher
-z_offset: 7.438
+z_offset: 7.41
 speed: 4.0
 lift_speed: 8.0
 samples: 2
