print head slightly higher to avoid elephant foot lower purge temp when switching/using PLAs

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -377,8 +377,7 @@ max_power: 0.5
 pin: ^PA3
 x_offset: -2.5
 y_offset: 25.0
-# +: lower, -:higher
-z_offset: 7.41
+z_offset: 7.39 # +: lower, -:higher
 speed: 4.0
 lift_speed: 8.0
 samples: 2
