add an enable command as example

--- a/klipper/macros.cfg
+++ b/klipper/macros.cfg
@@ -2,6 +2,7 @@
 #  Macros # To merge into my print start if necessary
 #####################################################################
 [gcode_macro PRINT_START]
+enable: {printer.idle_timeout.state == "Printing"} ;for enabling command only when printing, only as example do not use in print_start
 gcode:
     {% set bed_temp = params.BED_TEMP|default(100)|float %}
     {% set extruder_temp = params.EXTRUDER_TEMP|default(220)|float %}
