add back auto-z calibration

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,14 +1,4 @@
-[gcode_macro HOME_QGL]
-gcode:
-    BED_MESH_CLEAR
-    G28 X Y
-    ATTACH_PROBE_LOCK
-    G28 Z
-    QUAD_GANTRY_LEVEL
-    G28 Z
-    DOCK_PROBE_UNLOCK
-    G0 X150 Y150 Z30 F3600
- 
+
    
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
@@ -17,10 +7,15 @@ gcode:
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
   
+  BED_MESH_CLEAR    
+
+  _CG28
+  PARK_CENTER Z=50   # Heat nozzle with full fan to help preheat chamber
+  M106 S255          ; set print fan to full speed to avoid melting fan ducts
+  M104 S180          ; Set nozzle temperature
   M117 Heating bed...
-  M190 S{BED} # heat bed due to PrusaSlicer setting it at 0
+  M190 S{BED}        ; heat bed
   
-  #if the bed is already at the correct target temp, we assume no heat soak is necessary.
   {% if (SOAK|int) > 0 %}
     M117 Starting Soak
     {% for timer in range( SOAK|int,0,-1) %}
@@ -28,42 +23,52 @@ gcode:
       M117 Soak: {timer|int}m remaining
       
       M105
-      G4 P60000
+      G4 P60000 # Wait 1 minute
           
     {% endfor %}
   M117 Soak Complete
   {% endif %}
 
-  BED_MESH_CLEAR                 
-  G90
-  G28 X Y                            ; Use absolute coordinates
-  ATTACH_PROBE_LOCK
-  G28 Z                        ; Home the printer
-  QUAD_GANTRY_LEVEL
-  BED_MESH_CALIBRATE
-  DOCK_PROBE_UNLOCK
-
-  M117 Heating Extruder..
-  M106 S255                      ; set print fan to full speed to avoid melting fan ducts
+  QUAD_GANTRY_LEVEL CALIBRATE=false
+  
+  # Prepare nozzle for cleaning and calibration
+  M117 Heating Extruder for calibration
+  M106 S255                 ; set print fan to full speed to avoid melting fan ducts
   M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
-  clean_nozzle PURGE=true                   ; clean nozzle
+  G4 P60000                 ; Wait 1 minutes that oozes stop
+  clean_nozzle PURGE=false  ; clean nozzle
+  M117 Waiting oozing...
+  G4 P60000                 ; Wait 1 minute that oozes stop
+  clean_nozzle PURGE=false  ; clean nozzle
 
+  M117 Calibrate Z
+  CALIBRATE_Z
+
+  M117 Bed Mesh
+  BED_MESH_CALIBRATE
+  
+  clean_nozzle PURGE=true   ; Purge nozzle
+  
+  G90                         ; Use absolute coordinates
   M117 Starting Print
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
 gcode:
+    {% set BED = params.BED|default(0)|float %}
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
     G1 E-10.0 F3600                ; retract filament
     G91                            ; relative positioning
     G0 Z1.00 X20.0 Y20.0 F20000    ; move nozzle to remove stringing
     TURN_OFF_HEATERS
+    M140 S{BED}                    ; keep bed heat to chain prints
     M107                           ; turn off fan
     G1 Z2 F3000                    ; move nozzle up 2mm
     G90                            ; absolute positioning
     G0 X45 Y308 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
+    M117 Print Complete
     
 
 [gcode_macro PAUSE]
@@ -165,3 +170,19 @@ gcode:
     G90                            ; absolute positioning
     G0 X50 Y308 Z{Z} F12000       ; move to center
     RESTORE_GCODE_STATE NAME=PARKBUCKET_state
+
+[gcode_macro UNSTRESS_PRINT]
+gcode:
+  M106 S255                 ; set print fan to full speed to avoid melting fan ducts
+  M190 S105                 ; heat bed
+  {% for timer in range( 15,0,-1) %}
+    #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
+    M118 Unstressing: {timer|int}m remaining
+    
+    M105
+    G4 P60000             ; Wait 1 minute
+        
+  {% endfor %}
+  TURN_OFF_HEATERS
+  G4 P60000               ; Wait 1 minute
+  M106 S0                 ; set print fan to off
