--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -23,7 +23,8 @@ path: ~/gcode_files
 [include client.cfg]
 [include client_macros.cfg]
 [include nozzle_scrub.cfg]
-[include klicky_probe.cfg]
+[include z_calibration.cfg]
+[include z_calibration_homing.cfg]
 
 
 ###################################################################
@@ -151,7 +152,7 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
 ##  In Z- Position
-endstop_pin: probe:z_virtual_endstop #^PA0
+endstop_pin: ^PA0
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##	Increasing position_endstop brings nozzle closer to the bed
@@ -396,6 +397,7 @@ fade_start: 0.6
 fade_end: 10.0
 probe_count: 5,4
 algorithm: bicubic
+relative_reference_index: 12
 
   
 #####################################################################
@@ -493,7 +495,7 @@ timeout: 5400 # 90 minutes
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [stepper_z]
-#*# position_endstop = 3.222 
+#*# position_endstop = 2.780 
 #*#
 #*# [heater_bed]
 #*# control = pid
