add nevermore fan pins and switched pin for pi fan

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -354,11 +354,16 @@ off_below: 0.1
 heater: extruder
 
 [controller_fan pi_fan]
-pin: PB5
+pin: PB6
 kick_start_time: 0.5
 off_below: 0.1
 max_power: 0.5
 # heater: heater_bed
+
+[fan_generic nevermore_fan]
+pin: PB5
+kick_start_time: 0.5
+off_below: 0.3
 
 
 #[heater_fan exhaust_fan]
