changed X's Z endstop location and klicky location

--- a/klipper/z_calibration_homing.cfg
+++ b/klipper/z_calibration_homing.cfg
@@ -25,7 +25,7 @@ gcode:
     {% endif %} 
 
     ##    XY Location of the Z Endstop Switch
-    G0 X205.9 Y308 F12000            ; move to Z-Pin
+    G0 X247 Y308 F12000            ; move to Z-Pin //////////////// Modify to correct position
     G28 Z                          ; home Z
     G0 Z20 F540                    ; move up
 
