add lights move fans settings in fan.cfg

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -25,6 +25,9 @@ path: ~/gcode_files
 [include nozzle_scrub.cfg]
 [include z_calibration.cfg]
 [include z_calibration_homing.cfg]
+[include fan.cfg]
+[include light.cfg]
+
 
 
 ###################################################################
@@ -323,67 +326,13 @@ sensor_type: temperature_host
 sensor_type: temperature_mcu
 
 #####################################################################
-#	Fan Control
-#####################################################################
-
-[heater_fan hotend_fan]
-##	Hotend Fan - FAN1 Connector
-pin: PB1
-max_power: 1.0
-kick_start_time: 0.5
-heater: extruder
-heater_temp: 50.0
-##	If you are experiencing back flow, you can reduce fan_speed
-#fan_speed: 1.0
-
-[fan]
-##	Print Cooling Fan - FAN0 Connector
-pin: PB0
-max_power: 1.0
-kick_start_time: 0.5
-##	Depending on your fan, you may need to increase this value
-##	if your fan will not start. Can change cycle_time (increase)
-##	if your fan is not able to slow down effectively
-off_below: 0.10
-
-[controller_fan spider_fan]
-pin: PB7
-kick_start_time: 0.5
-max_power:0.7
-off_below: 0.1
-heater: extruder
-
-[controller_fan pi_fan]
-pin: PB6
-kick_start_time: 0.5
-off_below: 0.1
-max_power: 0.5
-# heater: heater_bed
-
-[fan_generic nevermore_fan]
-pin: PB5
-kick_start_time: 0.5
-off_below: 0.3
-
-
-#[heater_fan exhaust_fan]
-##  Exhaust fan - In E2 OUT Positon
-#pin: PB3
-#max_power: 1.0
-#shutdown_speed: 0.0
-#kick_start_time: 5.0
-#heater: heater_bed
-#heater_temp: 60
-#fan_speed: 1.0
-
-#####################################################################
 # 	Probe 
 #####################################################################
 [probe]
 pin: ^PA3
 x_offset: -2.5
-y_offset: 25.0
-z_offset: 7.39 # +: lower, -:higher
+y_offset: 17.5
+z_offset: 7.39 # +: lower, -:higher 
 speed: 4.0
 lift_speed: 8.0
 samples: 2
@@ -424,18 +373,6 @@ horizontal_move_z: 15 #5
 retries: 5
 retry_tolerance: 0.01
 max_adjust: 10
-
-#####################################################################
-#	LED Control
-#####################################################################
-
-#[output_pin caselight ]
-##  Chamber Lighting - In 5V-RGB Position
-#pin: PD3
-#pwm: true
-#shutdown_value: 0
-#value:100
-#cycle_time: 0.01
 
 #####################################################################
 #	Homing and Gantry Adjustment Routines
@@ -500,7 +437,7 @@ timeout: 5400 # 90 minutes
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [stepper_z]
-#*# position_endstop = 2.780 
+#*# position_endstop = 1.715 
 #*#
 #*# [heater_bed]
 #*# control = pid
