--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -25,6 +25,7 @@ path: ~/gcode_files
 [include nozzle_scrub.cfg]
 [include z_calibration.cfg]
 [include z_calibration_homing.cfg]
+[include probe.cfg]
 [include fan.cfg]
 [include light.cfg]
 
@@ -324,55 +325,6 @@ sensor_type: temperature_host
 #######################################
 [temperature_sensor spider_temp]
 sensor_type: temperature_mcu
-
-#####################################################################
-# 	Probe 
-#####################################################################
-[probe]
-pin: ^PA3
-x_offset: -2.5
-y_offset: 17.5
-z_offset: 7.39 # +: lower, -:higher 
-speed: 4.0
-lift_speed: 8.0
-samples: 2
-samples_result: average
-sample_retract_dist: 1.5
-samples_tolerance: 0.007
-samples_tolerance_retries: 4
-
-
-[bed_mesh]
-speed: 300
-horizontal_move_z: 10
-mesh_min: 15, 25
-mesh_max: 285,275
-fade_start: 0.6
-fade_end: 10.0
-probe_count: 5,4
-algorithm: bicubic
-relative_reference_index: 12
-
-  
-#####################################################################
-#  Gantry Adjustment Routines
-#####################################################################
-[quad_gantry_level]
-##	Gantry Corners for 300mm Build
-gantry_corners:
-	-60,-10
-	360,370
-#	Probe points
-points:
-	50,25
-	50,225
-	250,225
-	250,25
-speed: 300
-horizontal_move_z: 15 #5
-retries: 5
-retry_tolerance: 0.01
-max_adjust: 10
 
 #####################################################################
 #	Homing and Gantry Adjustment Routines
