update print_start fix various issues of positionning with klicky, try to avoid the max Y while moving else it will hit the klicky dock

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,5 +1,3 @@
-
-   
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
@@ -7,17 +5,23 @@ gcode:
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
   
-  BED_MESH_CLEAR    
+  BED_MESH_CLEAR   
+  LIGHT_RED 
 
-  _CG28
-  PARK_CENTER Z=50   # Heat nozzle with full fan to help preheat chamber
   M106 S255          ; set print fan to full speed to avoid melting fan ducts
-  M104 S180          ; Set nozzle temperature
+  M104 S180          ; pre-heat nozzle non-blocking
+  M140 S{BED}        ; Pre-heat bed non-blocking
+
+  CG28             ; Home all axes
+
+  PARK_CENTER Z=20   # Positino Nozzle at center to help preheat chamber
+  SET_NEVERMORE_SPEED SPEED=1
   M117 Heating bed...
   M190 S{BED}        ; heat bed
   
   {% if (SOAK|int) > 0 %}
     M117 Starting Soak
+    LIGHT_ORANGE
     {% for timer in range( SOAK|int,0,-1) %}
       #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
       M117 Soak: {timer|int}m remaining
@@ -29,6 +33,7 @@ gcode:
   M117 Soak Complete
   {% endif %}
 
+  LIGHT_BLUE
   QUAD_GANTRY_LEVEL CALIBRATE=false
   
   # Prepare nozzle for cleaning and calibration
@@ -47,8 +52,12 @@ gcode:
   M117 Bed Mesh
   BED_MESH_CALIBRATE
   
+  LIGHT_GREEN
   clean_nozzle PURGE=true   ; Purge nozzle
   
+  SET_NEVERMORE_SPEED SPEED=0.5
+  LIGHT_WHITE
+
   G90                         ; Use absolute coordinates
   M117 Starting Print
 
@@ -56,6 +65,8 @@ gcode:
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
 gcode:
     {% set BED = params.BED|default(0)|float %}
+    SET_NEVERMORE_SPEED SPEED=1
+  
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
     G1 E-10.0 F3600                ; retract filament
@@ -69,6 +80,7 @@ gcode:
     G0 X45 Y308 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     M117 Print Complete
+    CASELIGHT                     ; kill lights
     
 
 [gcode_macro PAUSE]
