--- a/klipper/fan.cfg
+++ b/klipper/fan.cfg
@@ -6,7 +6,7 @@ description: SET_NEVERMORE SPEED=<speed> This command sets the speed of a fan. m
 
 gcode:
     {% set SPEED = params.SPEED|default(0)|float %}
-    SET_FAN_SPEED FAN=nevermore SPEED={SPEED}
+    SET_FAN_SPEED FAN=nevermore_fan SPEED={SPEED}
 
 #####################################################################
 #	Fan Control
