--- a/klipper/macros.cfg
+++ b/klipper/macros.cfg
@@ -8,7 +8,7 @@
 #     {% set z_adjust = params.Z_ADJUST|default(0.0)|float %}
 #     {% set retract = 10 %}
 #     BED_MESH_CLEAR                 ; clear mesh
-#     _CG28                          ; Home the printer
+#     CG28                          ; Home the printer
 #     G90                            ; Use absolute coordinates
 #     PARKCENTER                     ; Move to center
 #     M117 Heating..
