--- a/klipper/z_calibration.cfg
+++ b/klipper/z_calibration.cfg
@@ -35,7 +35,7 @@ probing_first_fast: true
 rename_existing: BASE_QUAD_GANTRY_LEVEL
 gcode:
     M117 QGL..
-    _CG28 RESET_SETTINGS=false
+    CG28 RESET_SETTINGS=false
     SECURE_ATTACH_PROBE
     PARKCENTER
     BASE_QUAD_GANTRY_LEVEL
@@ -52,7 +52,7 @@ gcode:
 [gcode_macro CALIBRATE_Z]
 rename_existing: BASE_CALIBRATE_Z
 gcode:
-    _CG28 RESET_SETTINGS=false
+    CG28 RESET_SETTINGS=false
     M117 Z-Calibration..
     SECURE_ATTACH_PROBE
     BASE_CALIBRATE_Z
@@ -121,11 +121,9 @@ gcode:
     SAVE_GCODE_STATE NAME=_ATTACH_PROBE
     SET_GCODE_OFFSET Z=0.0         ; reset offset - will be restored
     G90                            ; absolute positioning
-    G0 X192.3 Y283 Z20 F12000      ; move to mag-probe
+    G0 X192.3 Y280 Z20 F12000      ; move to mag-probe
     G0 Y308 F6000                  ; move in
-    G0 Y283 F6000                  ; move out
-    G0 X40 F6000                    ; move to X bucket
-    G0 Y308 F6000                   ; move to Y bucket
+    G0 Y280 F6000                  ; move out
     RESTORE_GCODE_STATE NAME=_ATTACH_PROBE
 
 [gcode_macro _DOCK_PROBE]
@@ -133,10 +131,11 @@ gcode:
     SAVE_GCODE_STATE NAME=_DOCK_PROBE
     SET_GCODE_OFFSET Z=0.0         ; reset offset - will be restored
     G90                            ; absolute positioning
-    G0 X192.3 Y283 Z20 F12000      ; move to mag-probe
+    G0 X192.3 Y280 Z20 F12000      ; move to mag-probe
     G0 Y308 F6000                  ; move in
-    G0 X60 F6000                    ; move side to force detach
-    G0 X40 F6000                    ; move above bucket
+    G0 X150 F6000                    ; move side to force detach
+    G0 Y280 F12000
+    G0 X192.3 F12000
     RESTORE_GCODE_STATE NAME=_DOCK_PROBE
 
 [gcode_macro BED_MESH_CALIBRATE]
