--- a/klipper/z_calibration_homing.cfg
+++ b/klipper/z_calibration_homing.cfg
@@ -1,6 +1,8 @@
 #####################################################################
 #  Homing definition
 #####################################################################
+
+
 [homing_override]
 axes: z
 set_position_z: 0
@@ -25,7 +27,9 @@ gcode:
     {% endif %} 
 
     ##    XY Location of the Z Endstop Switch
-    G0 X245.7 Y308 F12000            ; move to Z-Pin //////////////// Modify to correct position
+    G0 Y280 F8000
+    G0 X245.7 F8000
+    G0 X245.7 Y308 F8000            ; move to Z-Pin
     G28 Z                          ; home Z
     G0 Z20 F540                    ; move up
 
@@ -35,7 +39,7 @@ gcode:
 #  Macros
 #####################################################################
 ## conditional home
-[gcode_macro _CG28]
+[gcode_macro CG28]
 gcode:
   {% if "xyz" not in printer.toolhead.homed_axes %}
     G28 RESET_SETTINGS={ params.RESET_SETTINGS|default('true') }
