--- a/klipper/light.cfg
+++ b/klipper/light.cfg
@@ -9,6 +9,27 @@ gcode:
   {% set BLUE = params.B|default(0)|float %}
   SET_LED LED=caselight RED={RED} GREEN={GREEN} BLUE={BLUE}
 
+[gcode_macro LIGHT_RED]
+gcode:
+    CASELIGHT R=1 # red
+  
+[gcode_macro LIGHT_ORANGE]
+gcode:
+    CASELIGHT R=1 G=0.4 # orange
+
+[gcode_macro LIGHT_BLUE]
+gcode:
+    CASELIGHT B=1 # blue
+
+[gcode_macro LIGHT_GREEN]
+gcode:
+    CASELIGHT G=1 # Green
+
+[gcode_macro LIGHT_WHITE]
+gcode:
+    CASELIGHT R=1 G=1 B=1 # White
+
+
 #####################################################################
 #	LED Control
 #####################################################################
