--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -50,15 +50,16 @@ variable_purge_ret:             2            ; Retract length, in mm, after purg
 variable_ooze_dwell:            15            ; Dwell/wait time, in seconds, after purging and retracting.
 
 # Adjust this so that your nozzle scrubs within the brush. Currently defaulted to be a lot higher for safety. Be careful not to go too low!
-variable_brush_top:            9 
+variable_brush_top:            5 
 
 # These parameters define your scrubbing, travel speeds, safe z clearance and how many times you want to wipe. Update as necessary. Wipe 
 # direction is randomized based off whether the left or right bucket is randomly selected in the purge & scrubbing routine.
+variable_clearance_y:           30
 variable_clearance_z:           15 	         ; When traveling, but not cleaning, the clearance along the z-axis between nozzle and brush.
 variable_wipe_qty:              3	         ; Number of complete (A complete wipe: left, right, left OR right, left, right) wipes.
-variable_prep_spd_xy:        3000	         ; Travel (not cleaning) speed along x and y-axis in mm/min.
+variable_prep_spd_xy:        6000	         ; Travel (not cleaning) speed along x and y-axis in mm/min.
 variable_prep_spd_z:         1500	         ; Travel (not cleaning) speed along z axis in mm/min.
-variable_wipe_spd_xy:        5000	         ; Nozzle wipe speed in mm/min.
+variable_wipe_spd_xy:        6000	         ; Nozzle wipe speed in mm/min.
 
 
 # These parameters define the size of the brush. Update as necessary. A visual reference is provided below. Note that orientation of 
@@ -156,6 +157,9 @@ gcode:
       ## Grab max position of Y-axis from config to use in setting a fixed y position for location_bucket_rear = True.
       {% set Ry = printer.configfile.config["stepper_y"]["position_max"]|float %}
 
+      ### Prepare positionning away from klicky dock
+      G1 Y{Ry - clearance_y} F{prep_spd_z}
+
       ## Check if user enabled purge option or not.
       M118 Is purge enabled? {_enable_purge}
       {% if _enable_purge %}
@@ -166,19 +170,16 @@ gcode:
          ### Raise Z for travel.
          G1 Z{brush_top + clearance_z} F{prep_spd_z}
 
-         ### Check if user chose to use rear location.
-         {% if location_bucket_rear %}
-            G1 Y{Ry} F{prep_spd_xy}
-         {% else %}
-            G1 Y{brush_front + (brush_depth / 2)} F{prep_spd_xy}
-         {% endif %}
-
          ### Position for purge. Randomly selects middle of left or right bucket. It references from the middle of the left bucket.
          {% if bucket_pos == 0 %}
             G1 X{bucket_start + (bucket_left_width / 3)}
          {% else %}
             G1 X{bucket_start + bucket_left_width + bucket_gap + (bucket_right_width * 1 / 2)}
          {% endif %}
+
+         ### Move over bucket
+         G1 Y{Ry} F{prep_spd_xy}
+
          G1 Z{brush_top}
 
          ### Perform purge if the temp is up to min temp. If not, it will skip and continue executing rest of macro. Small retract after
@@ -199,13 +200,7 @@ gcode:
       ## Position for wipe. Either left or right of brush based off bucket_pos to avoid unnecessary travel.
       G1 Z{brush_top + clearance_z} F{prep_spd_z}
       G1 X{brush_start + (brush_width * bucket_pos)} F{prep_spd_xy}
-
-      ## Check if user chose to use rear location.
-      {% if location_bucket_rear %}
-         G1 Y{Ry}
-      {% else %}
-         G1 Y{brush_front + (brush_depth / 2)}
-      {% endif %}
+      G1 Y{Ry}
 
       ## Move nozzle down into brush.
       G1 Z{brush_top} F{prep_spd_z}
