--- a/klipper/probe.cfg
+++ b/klipper/probe.cfg
@@ -18,14 +18,14 @@ drop_first_result: true
 
 [bed_mesh]
 speed: 300
-horizontal_move_z: 10
+horizontal_move_z: 5
 mesh_min: 15, 25
 mesh_max: 285,275
-fade_start: 0.6
+fade_start: 0.7
 fade_end: 10.0
-probe_count: 5,4
-algorithm: bicubic
-relative_reference_index: 12
+probe_count: 5,3
+algorithm: lagrange
+relative_reference_index: 7
 
 #####################################################################
 #  Gantry Adjustment Routines
