--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -28,27 +28,7 @@ path: ~/gcode_files
 [include probe.cfg]
 [include fan.cfg]
 [include light.cfg]
-
-
-
-###################################################################
-#  Raspberry ADXL
-###################################################################
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
-
-[adxl345]
-cs_pin: rpi:None
-axes_map: z,-x,y
-
-[resonance_tester]
-accel_chip: adxl345
-probe_points:
-    150,150,20 
-max_smoothing: 0.1
-min_freq: 10
-max_freq: 100
-
+[include raspi_mcu_adxl.cfg]
 
 ###################################################################
 #  MCU
