cleanup add TexturePlate Offset avoid hitting klicky dock when parking to bucket move nozzle 0.3 nearer of the bed

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -153,13 +153,9 @@ gcode:
 #####################################################################
 #  BED OFFSET
 #####################################################################
-[gcode_macro ABS_OFFSET]
+[gcode_macro TEXTURED_PLATE_OFFSET]
 gcode:
-  SET_GCODE_OFFSET Z_ADJUST=-0.15 MOVE=1
-
-[gcode_macro PLA_OFFSET]
-gcode:
-  SET_GCODE_OFFSET Z_ADJUST=0 MOVE=1
+  SET_GCODE_OFFSET Z_ADJUST=-0.1 MOVE=1
 
 #####################################################################
 #  OTHER
@@ -180,7 +176,9 @@ gcode:
     SAVE_GCODE_STATE NAME=PARKBUCKET_state
     CG28                          ; Home if not already homed
     G90                            ; absolute positioning
-    G0 X50 Y308 Z{Z} F12000       ; move to center
+    G0 Y280 Z{Z} F12000       
+    G0 X50 Z{Z} F12000       
+    G0 Y308 Z{Z} F12000       
     RESTORE_GCODE_STATE NAME=PARKBUCKET_state
 
 [gcode_macro UNSTRESS_PRINT]
