move nozzle away from the bed, 0.6 is in the bed... added m600 macro for changing filament and some tweaks and fixes

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -20,14 +20,17 @@ path: ~/gcode_files
 [pause_resume]
 [respond]
 
-[include client.cfg]
 [include client_macros.cfg]
 [include nozzle_scrub.cfg]
 [include z_calibration.cfg]
 [include z_calibration_homing.cfg]
+[include filament_switch.cfg]
+[include park_toolhead.cfg]
 [include probe.cfg]
 [include fan.cfg]
+[include offset_macro.cfg]
 [include light.cfg]
+[include unstress_print.cfg]
 [include raspi_mcu_adxl.cfg]
 
 ###################################################################
@@ -82,7 +85,7 @@ position_min: 0
 position_endstop: 300 # 300mm build
 position_max: 300     # 300mm build
 
-homing_speed: 50   #Max 100
+homing_speed: 80   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
