--- a/klipper/z_calibration.cfg
+++ b/klipper/z_calibration.cfg
@@ -12,7 +12,7 @@ probe_switch_y: 291
 # !!! this must be the relative reference point of the mesh, if using one !!!
 probe_bed_x: 150
 probe_bed_y: 150
-switch_offset: 0.6 ; smaller is more away from bed!
+switch_offset: 0.37 ; smaller is more away from bed!
 max_deviation: 0.8
 speed: 300
 clearance: 10 #5
@@ -37,7 +37,7 @@ gcode:
     M117 QGL..
     CG28 RESET_SETTINGS=false
     SECURE_ATTACH_PROBE
-    PARKCENTER
+    PARK_CENTER
     BASE_QUAD_GANTRY_LEVEL
     G28 Z
     # ability to disable z calibration - it's done later in PRINT_START
@@ -151,12 +151,10 @@ gcode:
 rename_existing: _PROBE_ACCURACY
 gcode:
     #store current nozzle location
-    #SAVE_GCODE_STATE NAME=original_nozzle_location
+    SAVE_GCODE_STATE NAME=original_nozzle_location
     SECURE_ATTACH_PROBE
-    PARKCENTER Z={printer.configfile.settings.quad_gantry_level.horizontal_move_z}
-    _PROBE_ACCURACY {% for p in params 
-            %}{'%s=%s' % (p, params[p])}{% 
-           endfor %}
+    PARK_CENTER Z={printer.configfile.settings.quad_gantry_level.horizontal_move_z}
+    _PROBE_ACCURACY {% for p in params %} {'%s=%s' % (p, params[p])} {% endfor %}
     SECURE_DOCK_PROBE
     #restore current nozzle location
-    #RESTORE_GCODE_STATE NAME=original_nozzle_location MOVE=1
+    RESTORE_GCODE_STATE NAME=original_nozzle_location MOVE=1
