--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -22,15 +22,8 @@ gcode:
   {% if (SOAK|int) > 0 %}
     M117 Starting Soak
     LIGHT_ORANGE
-    {% for timer in range( SOAK|int,0,-1) %}
-      #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
-      M117 Soak: {timer|int}m remaining
-      
-      M105
-      G4 P60000 # Wait 1 minute
-          
-    {% endfor %}
-  M117 Soak Complete
+    WAIT TIME=SOAK LOG_TEXT='Soak'
+    M117 Soak Complete
   {% endif %}
 
   LIGHT_BLUE
