--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -31,6 +31,7 @@ path: ~/gcode_files
 [include offset_macro.cfg]
 [include light.cfg]
 [include unstress_print.cfg]
+[include utils.cfg]
 [include raspi_mcu_adxl.cfg]
 
 ###################################################################
