add texture plate offset. needs a bit more squish

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -4,6 +4,7 @@ gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
+  {% set ON_TEXTURED_PLATE = params.TEXTUREDPLATE|default('false') %}
   
   BED_MESH_CLEAR   
   LIGHT_RED 
@@ -22,15 +23,8 @@ gcode:
   {% if (SOAK|int) > 0 %}
     M117 Starting Soak
     LIGHT_ORANGE
-    {% for timer in range( SOAK|int,0,-1) %}
-      #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
-      M117 Soak: {timer|int}m remaining
-      
-      M105
-      G4 P60000 # Wait 1 minute
-          
-    {% endfor %}
-  M117 Soak Complete
+    WAIT TIME=SOAK LOG_TEXT='Soak'
+    M117 Soak Complete
   {% endif %}
 
   LIGHT_BLUE
@@ -59,6 +53,11 @@ gcode:
   LIGHT_WHITE
 
   G90                         ; Use absolute coordinates
+  
+  {% if ON_TEXTURED_PLATE == 'true' %}
+    TEXTURED_PLATE_OFFSET
+  {% endif %}
+
   M117 Starting Print
 
 [gcode_macro PRINT_END]
@@ -149,10 +148,3 @@ gcode:
   TURN_OFF_HEATERS
   CANCEL_PRINT_BASE
 
-
-#####################################################################
-#  BED OFFSET
-#####################################################################
-[gcode_macro TEXTURED_PLATE_OFFSET]
-gcode:
-  SET_GCODE_OFFSET Z_ADJUST=-0.5 MOVE=1
