this should not have been commited here

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -23,7 +23,14 @@ gcode:
   {% if (SOAK|int) > 0 %}
     M117 Starting Soak
     LIGHT_ORANGE
-    WAIT TIME=SOAK LOG_TEXT='Soak'
+    {% for timer in range( SOAK|int,0,-1) %}
+      #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
+      M117 Soak: {timer|int}m remaining
+      
+      M105
+      G4 P60000 # Wait 1 minute
+          
+    {% endfor %}
     M117 Soak Complete
   {% endif %}
 
