--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -28,6 +28,7 @@ path: ~/gcode_files
 [include park_toolhead.cfg]
 [include probe.cfg]
 [include fan.cfg]
+[include filament_sensor.cfg]
 [include offset_macro.cfg]
 [include light.cfg]
 [include unstress_print.cfg]
