add log on TexturePlateOffset applied

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -60,6 +60,7 @@ gcode:
 
   G90                         ; Use absolute coordinates
   
+  M118 Is TEXTURED_PLATE_OFFSET applied: {ON_TEXTURED_PLATE == 'true'}
   {% if ON_TEXTURED_PLATE == 'true' %}
     TEXTURED_PLATE_OFFSET
   {% endif %}
