--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -33,6 +33,12 @@ path: ~/gcode_files
 [include light.cfg]
 [include unstress_print.cfg]
 [include raspi_mcu_adxl.cfg]
+[include pressure_advance_default.cfg]
+
+### PIDs uncomment only one
+[include dragon_nf_pid.cfg]
+#[include dragon_hf_pid.cfg]
+#[include v6_pla_pid.cfg]
 
 ###################################################################
 #  MCU
@@ -252,14 +258,6 @@ min_temp: 10
 max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
-#control = pid
-#pid_kp = 26.213
-#pid_ki = 1.304
-#pid_kd = 131.721
-##	Try to keep pressure_advance below 1.0
-pressure_advance: 0.02
-##	Default is 0.040, leave stock
-pressure_advance_smooth_time: 0.040
 
 ##	In E0-MOT Position
 ##	Make sure to update below for your relevant driver (2208 or 2209)
@@ -380,12 +378,6 @@ timeout: 5400 # 90 minutes
 #*# pid_kp = 40.273
 #*# pid_ki = 1.483
 #*# pid_kd = 273.350
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 25.766
-#*# pid_ki = 1.311
-#*# pid_kd = 126.575
 #*#
 #*# [bed_mesh default]
 #*# version = 1
