disable filament sensor while setting up

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -8,6 +8,7 @@ gcode:
   
   BED_MESH_CLEAR   
   LIGHT_RED 
+  SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=0
 
   M106 S255          ; set print fan to full speed to avoid melting fan ducts
   M104 S180          ; pre-heat nozzle non-blocking
@@ -65,6 +66,7 @@ gcode:
     TEXTURED_PLATE_OFFSET
   {% endif %}
 
+  SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
   M117 Starting Print
 
 [gcode_macro PRINT_END]
