add pid for dragon high flow

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -35,9 +35,9 @@ path: ~/gcode_files
 [include raspi_mcu_adxl.cfg]
 [include pressure_advance_default.cfg]
 
-### PIDs uncomment only one
-[include dragon_nf_pid.cfg]
-#[include dragon_hf_pid.cfg]
+### PIDs uncomment only one ###
+#[include dragon_normal_flow_pid.cfg]
+[include dragon_high_flow_pid.cfg]
 #[include v6_pla_pid.cfg]
 
 ###################################################################
