--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -36,8 +36,8 @@ path: ~/gcode_files
 [include pressure_advance_default.cfg]
 
 ### PIDs uncomment only one ###
-#[include dragon_normal_flow_pid.cfg]
-[include dragon_high_flow_pid.cfg]
+[include dragon_normal_flow_pid.cfg]
+#[include dragon_high_flow_pid.cfg]
 #[include v6_pla_pid.cfg]
 
 ###################################################################
