add description to print_start with default params

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,5 +1,5 @@
 [gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
+description: PRINT_START BED=100 EXTRUDER=240 SOAK=0 TEXTUREDPLATE=false
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
