--- a/klipper/filament_switch.cfg
+++ b/klipper/filament_switch.cfg
@@ -4,7 +4,8 @@ gcode:
     M117 Filament change
     PAUSE
     PARK_BUCKET Z=-1
-    UNLOAD
+	SET_IDLE_TIMEOUT TIMEOUT={12*60*60} ## Timeout 12H when filament change triggered
+    ##UNLOAD
     ## wait for filament change
     ## purge & clean nozzle
 
