add new pressure_advance_calibration macro

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -34,6 +34,7 @@ path: ~/gcode_files
 [include unstress_print.cfg]
 [include raspi_mcu_adxl.cfg]
 [include pressure_advance_default.cfg]
+[include pressure_advance_calibration.cfg]
 
 ### PIDs uncomment only one ###
 [include dragon_normal_flow_pid.cfg]
@@ -248,6 +249,7 @@ microsteps: 16
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
+max_extrude_cross_section: 4
 ##      In E0 OUT Position
 heater_pin: PB15
 ##	Validate the following thermistor type to make sure it is correct
