fix recursive call error add print_end after the calibration

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -70,9 +70,9 @@ gcode:
   M117 Starting Print
 
 [gcode_macro PRINT_END]
-#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
+description: PRINT_END KEEP_BED_AT=0
 gcode:
-    {% set BED = params.BED|default(0)|float %}
+    {% set BED = params.KEEP_BED_AT|default(0)|float %}
     SET_NEVERMORE_SPEED SPEED=1
   
     M400                           ; wait for buffer to clear
