--- a/klipper/pressure_advance_calibration.cfg
+++ b/klipper/pressure_advance_calibration.cfg
@@ -4,9 +4,13 @@ description: PRESSURE_ADVANCE_CALIBRATION BED=100 EXTRUDER=240 NOZZLE_DIAMETER=0
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
+  {% set SOAK = params.SOAK|default(20)|float %}
   {% set NOZZLE_DIAMETER = params.NOZZLE_DIAMETER|default(0.4)|float %}
-  PRINT_START BED={BED} EXTRUDER={EXTRUDER} SOAK=20
-  PRESSURE_ADVANCE_CALIBRATION START=0.02 INCREMENT=0.0025 RAFT=1 OUTER_SPEED=20 INNER_SPEED=200 PURGE_MM=4 LINES_PER_BAND=2 NOZZLE_DIAMETER={NOZZLE_DIAMETER}
+  {% set KEEP_BED_AT = params.KEEP_BED_AT|default(0)|float %}
+
+  PRINT_START BED={BED} EXTRUDER={EXTRUDER} SOAK={SOAK}
+  _PRESSURE_ADVANCE_CALIBRATION START=0.02 INCREMENT=0.0025 RAFT=1 OUTER_SPEED=20 INNER_SPEED=200 PURGE_MM=4 LINES_PER_BAND=2 NOZZLE_DIAMETER={NOZZLE_DIAMETER}
+  PRINT_END KEEP_BED_AT={KEEP_BED_AT}
 
 #
 # Pressure Advance calibration test.
