--- a/klipper/pressure_advance_calibration.cfg
+++ b/klipper/pressure_advance_calibration.cfg
@@ -1,6 +1,6 @@
 
 [gcode_macro PRESSURE_ADVANCE_CALIBRATION]
-description: PRESSURE_ADVANCE_CALIBRATION BED=100 EXTRUDER=240 NOZZLE_DIAMETER=0.4
+description: PRESSURE_ADVANCE_CALIBRATION BED=100 EXTRUDER=240 SOAK=20 NOZZLE_DIAMETER=0.4 KEEP_BED_AT=0
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
