add nevermore param for PLA not needing it

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,10 +1,11 @@
 [gcode_macro PRINT_START]
-description: PRINT_START BED=100 EXTRUDER=240 SOAK=0 TEXTUREDPLATE=false
+description: PRINT_START BED=100 EXTRUDER=240 SOAK=0 TEXTUREDPLATE=false NEVERMOREFANSPEED=1
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(0)|float %}
   {% set ON_TEXTURED_PLATE = params.TEXTUREDPLATE|default('false') %}
+  {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(1) %}
   
   BED_MESH_CLEAR   
   LIGHT_RED 
@@ -16,8 +17,8 @@ gcode:
 
   CG28             ; Home all axes
 
-  PARK_CENTER Z=20   # Positino Nozzle at center to help preheat chamber
-  SET_NEVERMORE_SPEED SPEED=1
+  PARK_CENTER Z=20   # Position Nozzle at center to help preheat chamber
+  SET_NEVERMORE_SPEED SPEED={NEVERMORE_FAN_SPEED}
   SHOW TEXT='Heating bed...'
   M190 S{BED}        ; heat bed
   
