--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -85,7 +85,7 @@ step_pin: PE11
 dir_pin: !PE10
 enable_pin: !PE9
 rotation_distance: 40
-microsteps: 16
+microsteps: 128
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: ^PA1 
 position_min: 0
@@ -100,9 +100,8 @@ homing_positive_dir: true
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_x]
 uart_pin: PE7
-interpolate: True
+interpolate: False
 run_current: 0.8
-hold_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -112,7 +111,7 @@ step_pin: PD8
 dir_pin: !PB12
 enable_pin: !PD9
 rotation_distance: 40
-microsteps: 16
+microsteps: 128
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: ^PA2 
 position_min: 0
@@ -127,9 +126,8 @@ homing_positive_dir: true
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_y]
 uart_pin: PE15
-interpolate: True
+interpolate: False
 run_current: 0.8
-hold_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -145,7 +143,7 @@ dir_pin: !PC13
 enable_pin: !PE5
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 128
 ##  In Z- Position
 endstop_pin: ^PA0
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
@@ -164,9 +162,8 @@ homing_retract_dist: 3
 [tmc2209 stepper_z]
 uart_pin: PC14
 uart_address: 0
-interpolate: True
+interpolate: False
 run_current: 0.8
-hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -178,14 +175,13 @@ dir_pin: PE4
 enable_pin: !PE3
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 128
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
 uart_pin: PC15
-interpolate: True
+interpolate: False
 run_current: 0.8
-hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -197,14 +193,13 @@ dir_pin: !PC4
 enable_pin: !PE8
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 128
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
 uart_pin: PA15
-interpolate: true
+interpolate: False
 run_current: 0.8
-hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -216,13 +211,12 @@ dir_pin: PE0
 enable_pin: !PC5
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 16
+microsteps: 128
 
 [tmc2209 stepper_z3]
 uart_pin: PD11
-interpolate: true
+interpolate: False
 run_current: 0.8
-hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -245,7 +239,7 @@ rotation_distance: 22.6789511	#Bondtech 5mm Drive Gears
 ##	Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##	Use 80:20 for M4, M3.1
 gear_ratio: 50:17				#BMG Gear Ratio
-microsteps: 16
+microsteps: 128
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
@@ -265,9 +259,8 @@ min_extrude_temp: 170
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 extruder]
 uart_pin: PD7
-interpolate: false
+interpolate: False
 run_current: 0.5
-hold_current: 0.4
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
