--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -17,18 +17,18 @@ gcode:
 
   CG28             ; Home all axes
 
-  PARK_CENTER Z=20   # Position Nozzle at center to help preheat chamber
+  PARK_CENTER Z=15   # Position Nozzle at center to help preheat chamber
   SET_NEVERMORE_SPEED SPEED={NEVERMORE_FAN_SPEED}
   SHOW TEXT='Heating bed...'
   M190 S{BED}        ; heat bed
   
+  ; Soak printer to let it thermally expand to have a constant first layer 
   {% if (SOAK|int) > 0 %}
     SHOW TEXT='starting Soak'
     LIGHT_ORANGE
     {% for timer in range( SOAK|int,0,-1) %}
-      #we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
-       SHOW TEXT='Soak: {timer|int}m remaining'
-      
+      # we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
+      SHOW TEXT='Soak: {timer|int}m remaining'
       M105
       G4 P60000 # Wait 1 minute
           
@@ -36,10 +36,11 @@ gcode:
   SHOW TEXT='Soak Complete'
   {% endif %}
 
-  LIGHT_BLUE
-  QUAD_GANTRY_LEVEL CALIBRATE=false
-  
   M104 S{EXTRUDER}    ; Let the nozzle heatup to temperature while probing mesh
+
+  LIGHT_BLUE
+  SHOW TEXT='Quad Gantry Level'
+  QUAD_GANTRY_LEVEL CALIBRATE=false
 
   SHOW TEXT='Bed Mesh'
   BED_MESH_CALIBRATE
@@ -47,28 +48,24 @@ gcode:
   # Prepare nozzle for cleaning and calibration
   SHOW TEXT='Heating Extruder for calibration'
   M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
-  clean_nozzle PURGE=false  ; clean nozzle
+  clean_nozzle PURGE=true  ; clean nozzle
   SHOW TEXT='Waiting oozing...'
-  G4 P60000                 ; Wait 1 minute that oozes stop
+  G4 P30000                 ; Wait 30 seconds that oozes stop
   clean_nozzle PURGE=false  ; clean nozzle
 
   SHOW TEXT='Calibrate Z'
   CALIBRATE_Z
-
-  LIGHT_GREEN
-  clean_nozzle PURGE=true   ; Purge nozzle
-  
-  LIGHT_WHITE
-
-  G90                         ; Use absolute coordinates
-  
+  ; Apply offset for textured plate that is lower than sensor probed
   M118 Is TEXTURED_PLATE_OFFSET applied: {ON_TEXTURED_PLATE == 'true'}
   {% if ON_TEXTURED_PLATE == 'true' %}
     TEXTURED_PLATE_OFFSET
   {% endif %}
-
+  
+  G90                         ; Use absolute coordinates
+ 
   SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
-  SHOW TEXT='Starting Print'
+  SHOW TEXT='Print Started'
+  LIGHT_WHITE
 
 [gcode_macro PRINT_END]
 description: PRINT_END KEEP_BED_AT=0
