--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -56,7 +56,7 @@ variable_brush_top:            5
 # direction is randomized based off whether the left or right bucket is randomly selected in the purge & scrubbing routine.
 variable_clearance_y:           30
 variable_clearance_z:           15 	         ; When traveling, but not cleaning, the clearance along the z-axis between nozzle and brush.
-variable_wipe_qty:              3	         ; Number of complete (A complete wipe: left, right, left OR right, left, right) wipes.
+variable_wipe_qty:              1	         ; Number of complete (A complete wipe: left, right, left OR right, left, right) wipes.
 variable_prep_spd_xy:        6000	         ; Travel (not cleaning) speed along x and y-axis in mm/min.
 variable_prep_spd_z:         1500	         ; Travel (not cleaning) speed along z axis in mm/min.
 variable_wipe_spd_xy:        6000	         ; Nozzle wipe speed in mm/min.
@@ -209,6 +209,7 @@ gcode:
       {% for wipes in range(1, (wipe_qty + 1)) %}
          G1 X{brush_start + (brush_width * (1 - bucket_pos))} F{wipe_spd_xy}
          G1 X{brush_start + (brush_width * bucket_pos)} F{wipe_spd_xy}
+         G1 X{brush_start + (brush_width * (1 - bucket_pos))} F{wipe_spd_xy}
       {% endfor %}
    
       ## Clear from area.
