--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -85,7 +85,7 @@ step_pin: PE11
 dir_pin: !PE10
 enable_pin: !PE9
 rotation_distance: 40
-microsteps: 128
+microsteps: 16
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: ^PA1 
 position_min: 0
@@ -100,8 +100,9 @@ homing_positive_dir: true
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_x]
 uart_pin: PE7
-interpolate: False
+interpolate: True
 run_current: 0.8
+hold_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -111,7 +112,7 @@ step_pin: PD8
 dir_pin: !PB12
 enable_pin: !PD9
 rotation_distance: 40
-microsteps: 128
+microsteps: 16
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: ^PA2 
 position_min: 0
@@ -126,8 +127,9 @@ homing_positive_dir: true
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_y]
 uart_pin: PE15
-interpolate: False
+interpolate: True
 run_current: 0.8
+hold_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -143,7 +145,7 @@ dir_pin: !PC13
 enable_pin: !PE5
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 16
 ##  In Z- Position
 endstop_pin: ^PA0
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
@@ -162,8 +164,9 @@ homing_retract_dist: 3
 [tmc2209 stepper_z]
 uart_pin: PC14
 uart_address: 0
-interpolate: False
+interpolate: True
 run_current: 0.8
+hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -175,13 +178,14 @@ dir_pin: PE4
 enable_pin: !PE3
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 16
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
 uart_pin: PC15
-interpolate: False
+interpolate: True
 run_current: 0.8
+hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -193,13 +197,14 @@ dir_pin: !PC4
 enable_pin: !PE8
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 16
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
 uart_pin: PA15
-interpolate: False
+interpolate: true
 run_current: 0.8
+hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -211,12 +216,13 @@ dir_pin: PE0
 enable_pin: !PC5
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 16
 
 [tmc2209 stepper_z3]
 uart_pin: PD11
-interpolate: False
+interpolate: true
 run_current: 0.8
+hold_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -239,7 +245,7 @@ rotation_distance: 22.6789511	#Bondtech 5mm Drive Gears
 ##	Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##	Use 80:20 for M4, M3.1
 gear_ratio: 50:17				#BMG Gear Ratio
-microsteps: 128
+microsteps: 16
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
@@ -259,8 +265,9 @@ min_extrude_temp: 170
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 extruder]
 uart_pin: PD7
-interpolate: False
+interpolate: false
 run_current: 0.5
+hold_current: 0.4
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
